Settings: Add ZenOS Version to FirmwareDialog
* Show the ZenOS version in the Android version popup
* Adapted from 3dec170 Create a dialog for firmware version

Change-Id: I97dfbb070bacc5b8bc4c03751bef9f319a883cbc

--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -15,6 +15,10 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- StatiXOS version -->
+    <string name="zen_version">ZenOS version</string>
+    <string name="zen_version_default">Unknown</string>
+
     <!-- App details: open play store link if app is user installed -->
     <string name="app_play_store">Google Play</string>
 
