Settings: Add switch for linked ring and media notification volumes
Change-Id: I900af398f566a5415c44fe883cc214985f4e9cd4
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -32,4 +32,7 @@
     <string name="battery_temp_title">Battery temperature</string>
     <string name="battery_temp_summary">Tap to switch scale</string>
 
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
+
 </resources>
