--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -53,4 +53,7 @@
     <string name="thermal_control_per_app_dialer">Dialer</string>
     <string name="thermal_control_per_app_camera">Camera</string>
 
+    <!-- Ambient category -->
+    <string name="ambient_display_category">Ambient options</string>
+
 </resources>
