--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -100,12 +100,6 @@
         android:title="@string/screensaver_settings_title"
         android:fragment="com.android.settings.dream.DreamSettings" />
 
-    <com.android.settingslib.RestrictedPreference
-        android:key="ambient_display"
-        android:title="@string/ambient_display_screen_title"
-        android:fragment="com.android.settings.display.AmbientDisplaySettings"
-        settings:userRestriction="no_ambient_display" />
-
     <!-- Hide night mode for now
     <ListPreference
         android:key="night_mode"
@@ -129,14 +123,30 @@
         android:title="@string/tap_to_wake"
         android:summary="@string/tap_to_wake_summary" />
 
+    <Preference
+        android:key="vr_display_pref"
+        android:title="@string/display_vr_pref_title"
+        android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
+
     <ListPreference
         android:key="theme"
         android:title="@string/color_theme"
         android:summary="@string/summary_placeholder" />
 
-    <Preference
-        android:key="vr_display_pref"
-        android:title="@string/display_vr_pref_title"
-        android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
+    <PreferenceCategory
+        android:key="ambient_display_category"
+        android:title="@string/ambient_display_category">
+
+        <com.android.settingslib.RestrictedPreference
+            android:key="ambient_display"
+            android:title="@string/ambient_display_screen_title"
+            android:fragment="com.android.settings.display.AmbientDisplaySettings"
+            settings:userRestriction="no_ambient_display" />
+
+        <Preference
+            android:key="ambient_display_custom"
+            android:title="@string/ambient_display_screen_title" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
