--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -57,4 +57,9 @@
     <string name="ambient_display_category">Ambient options</string>
     <string name="custom_ambient_display_summary">Configure advanced Ambient display</string>
 
+	    <!-- Changelog -->
+    <string name="changelog_title">Changelog</string>
+    <string name="changelog_summary">Since the last update</string>
+    <string name="changelog_error">Unable to load changelog</string>
+
 </resources>
