Add Font preference for font manager
Fix some stuff

Change-Id: Ifb6eb578e6b6b22ca15baa7cb8f8db32bebe6e15

--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -61,4 +61,9 @@
     <string name="changelog_summary">Since the last update</string>
     <string name="changelog_error">Unable to load changelog</string>
 
+    <!-- FontEngine -->
+    <string name="font_picker_title">Font</string>
+    <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
+
+
 </resources>
