--- a/res/xml/system_dashboard_fragment.xml
+++ b/res/xml/system_dashboard_fragment.xml
@@ -20,13 +20,13 @@
     android:key="system_dashboard_screen"
     android:title="@string/header_category_system">
 
-    <Preference
+    <!-- Preference
         android:key="gesture_settings"
         android:title="@string/gesture_preference_title"
         android:icon="@drawable/ic_settings_gestures"
         android:order="-250"
         android:fragment="com.android.settings.gestures.GestureSettings"
-        settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/>
+        settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/ -->
 
     <!-- Backup -->
     <Preference
