--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -66,4 +66,8 @@
     <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
 
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Lock the screen and buttons when the device is in your pocket</string>
+
 </resources>
