Settings: Reset battery stats [2/2]
Change-Id: I5521d0c0e78330f99745dae8de67788b92e91b46
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -84,4 +84,9 @@
     <string name="pocket_judge_title">Pocket detection</string>
     <string name="pocket_judge_summary">Lock the screen and buttons when the device is in your pocket</string>
 
+    <!-- Battery Stats -->
+    <string name="battery_stats_reset">Reset stats</string>
+    <string name="battery_stats_message">Battery history stats are going to be reset</string>
+    <string name="ok_string">Ok</string>
+
 </resources>
