Settings: Wake on plug [2/2]
Change-Id: Ia176b733a006c762818d3c5355ca83e2c696852c

--- a/res/values/zen_strings.xml
+++ b/res/values/zen_strings.xml
@@ -119,4 +119,8 @@
     <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
     <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
 
+    <!-- Wake on plug -->
+    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
+    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
+
 </resources>
